feat: add adaptive styles for screen lg

--- a/src/styles/logos.css
+++ b/src/styles/logos.css
@@ -25,6 +25,26 @@
     --logos-animation-duration: 50s;
     --logos-glow-size: 504px;
     --logos-glow-visual-compensation: 50px; /* Increase to enhance the glow, decrease to reduce */
+    --logos-glow-gradient-opacity: 60%;
+
+    @screen xl {
+      --logos-sprite-width: 2768px;
+      --logos-animation-duration: 40s;
+      --logos-glow-size: 336px;
+    }
+
+    @screen lg {
+      --logos-sprite-width: 2000px;
+      --logos-sprite-height: 36px;
+      --logos-animation-duration: 30s;
+      --logos-glow-size: 240px;
+      --logos-glow-gradient-opacity: 40%;
+    }
+
+    @screen sm {
+      --logos-sprite-width: 1911px;
+      --logos-glow-size: 144px;
+    }
 
     @apply relative overflow-hidden;
 
@@ -38,25 +58,49 @@
 
     background-image: radial-gradient(
       var(--logos-glow-size) at top,
-      theme('colors.green.45') 60%,
+      theme('colors.green.45') var(--logos-glow-gradient-opacity),
       transparent 100%
     );
-    mask-image: url('/images/partners-logos.svg');
+    mask-image: url('/images/pages/partners/logos.svg');
     mask-repeat: repeat-x;
     mask-position: 0 bottom;
     mask-size: var(--logos-sprite-width) var(--logos-sprite-height);
 
     animation: ticker-front var(--logos-animation-duration) linear infinite;
+
+    @screen xl {
+      mask-image: url('/images/pages/partners/logos-xl.svg');
+    }
+
+    @screen lg {
+      mask-image: url('/images/pages/partners/logos-lg.svg');
+    }
+
+    @screen sm {
+      mask-image: url('/images/pages/partners/logos-sm.svg');
+    }
   }
 
   .logos-back {
     @apply absolute bottom-0 left-0 z-10 h-full w-full before:absolute before:bottom-0 before:left-0 before:top-0 before:w-[100px] before:bg-gradient-to-r before:from-black-new before:to-transparent after:absolute after:bottom-0 after:right-0 after:top-0 after:w-[100px] after:bg-gradient-to-l after:from-black-new after:to-transparent;
 
-    background-image: url('/images/partners-logos.svg');
+    background-image: url('/images/pages/partners/logos.svg');
     background-repeat: repeat-x;
     background-position: 0 bottom;
     background-size: var(--logos-sprite-width) var(--logos-sprite-height);
 
     animation: ticker-back var(--logos-animation-duration) linear infinite;
+
+    @screen xl {
+      background-image: url('/images/pages/partners/logos-xl.svg');
+    }
+
+    @screen lg {
+      background-image: url('/images/pages/partners/logos-lg.svg');
+    }
+
+    @screen sm {
+      background-image: url('/images/pages/partners/logos-sm.svg');
+    }
   }
 }
