--- a/src/styles/blog-content.css
+++ b/src/styles/blog-content.css
@@ -85,7 +85,7 @@
       > code {
         text-shadow: unset !important;
 
-        @apply highlighted-code inline-block overflow-x-auto px-6 !font-mono !text-sm leading-normal !text-white md:min-w-[686px];
+        @apply highlighted-code inline-block w-full overflow-x-auto px-6 !font-mono !text-sm !leading-[1.725] !text-white md:min-w-[686px];
       }
     }
 
