--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -131,3 +131,29 @@
   animation: lineAnimation 5s linear infinite;
   animation-timing-function: steps(75);
 }
+
+.button-lines-pattern {
+  mask-image: url('/button-lines-pattern-mask.png');
+  mask-size: 100% 100%;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  background: repeating-linear-gradient(
+    0deg,
+    #0c0d0d,
+    #0c0d0d 1px,
+    transparent 1px,
+    transparent 2px
+  );
+
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    background: #078345;
+    animation: lineAnimation 5s linear infinite;
+    animation-timing-function: steps(75);
+  }
+}
