fix: link hover state

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -91,7 +91,7 @@
 @layer utilities {
   .with-link-primary {
     a {
-      @apply border-b border-transparent text-primary-1 transition-[border-color] duration-200 hover:border-primary-1;
+      @apply text-green-45 transition-colors duration-200 hover:text-[#00FFAA];
     }
   }
 
