--- a/src/styles/blog-content.css
+++ b/src/styles/blog-content.css
@@ -119,7 +119,7 @@
       @apply mx-auto rounded-md;
     }
 
-    .wp-block-embed {
+    .wp-block-embed:not(.wp-block-embed-twitter) {
       .wp-block-embed__wrapper {
         @apply relative h-0 overflow-hidden pb-[56.25%];
 
