--- a/src/styles/doc-content.css
+++ b/src/styles/doc-content.css
@@ -178,26 +178,28 @@
     @apply prose-ol:list-none;
 
     ol {
-      list-style-type: none;
       counter-reset: item;
-      margin: 0;
-      padding: 0;
+      @apply m-0 p-0;
     }
 
     ol > li {
       display: table;
       counter-increment: item;
-      margin-bottom: 0.6em;
+      @apply mb-[0.6em];
+    }
+
+    ol > li ol {
+      @apply md:pl-0;
     }
 
     ol > li:before {
       content: counters(item, '.') '. ';
       display: table-cell;
-      padding-right: 0.6em;
+      @apply pr-[0.6em];
     }
 
     li ol > li {
-      margin: 0;
+      @apply m-0;
     }
 
     li ol > li:before {
