--- a/src/styles/doc-content.css
+++ b/src/styles/doc-content.css
@@ -12,6 +12,12 @@
     }
   }
 
+  .postgres-heading {
+    > a {
+      @apply border-b-0;
+    }
+  }
+
   .prose-doc {
     @apply max-w-none leading-normal text-gray-new-8 prose-strong:text-gray-new-8 dark:text-gray-new-90 dark:prose-strong:text-gray-new-90;
     @apply prose-headings:leading-tight prose-headings:font-semibold prose-headings:text-black-new prose-p:my-3 prose-p:leading-normal dark:prose-headings:text-white;
