fix: sidebar adjustments

--- a/src/styles/doc-content.css
+++ b/src/styles/doc-content.css
@@ -14,7 +14,7 @@
 
   .postgres-heading {
     > a {
-      @apply border-b-0;
+      @apply border-b-0 opacity-0 text-green-45 hover:opacity-100 transition-opacity duration-200 ease-in-out;
     }
   }
 
