fix: show anchor on hover

--- a/src/styles/doc-content.css
+++ b/src/styles/doc-content.css
@@ -12,10 +12,19 @@
     }
   }
 
-  .postgres-heading,
+  .postgres-heading {
+    > a {
+      @apply border-b-0 opacity-0 text-green-45 transition-opacity duration-200 ease-in-out;
+    }
+
+    &:hover > a {
+      @apply opacity-100;
+    }
+  }
+
   .postgres-paragraph {
     > a {
-      @apply border-b-0 opacity-0 text-green-45 hover:opacity-100 transition-opacity duration-200 ease-in-out;
+      @apply border-b-0 text-secondary-8 dark:text-green-45;
     }
   }
 
