--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -61,6 +61,11 @@
     @apply mask-styles footer-icon-size;
   }
 
+  .discord-icon {
+    -webkit-mask-image: url('/images/footer/discord.svg');
+    @apply mask-styles footer-icon-size;
+  }
+
   .discourse-icon {
     -webkit-mask-image: url('/images/footer/discourse.svg');
     @apply mask-styles footer-icon-size;
