--- a/src/styles/doc-content.css
+++ b/src/styles/doc-content.css
@@ -11,7 +11,6 @@
       @apply mb-0;
     }
   }
-
   .postgres-heading {
     > a {
       @apply border-b-0 text-green-45 opacity-0 transition-opacity duration-200 ease-in-out;
@@ -73,7 +72,7 @@
 
   .prose-doc {
     @apply max-w-none leading-normal text-gray-new-8 prose-strong:text-gray-new-8 dark:text-gray-new-90 dark:prose-strong:text-gray-new-90;
-    @apply prose-headings:font-semibold prose-headings:leading-tight prose-headings:text-black-new prose-p:my-3 prose-p:leading-normal dark:prose-headings:text-white;
+    @apply prose-headings:leading-tight prose-headings:text-black-new prose-p:my-3 prose-p:leading-normal dark:prose-headings:text-white;
     @apply prose-a:border-b prose-a:border-transparent prose-a:font-normal prose-a:text-secondary-8 prose-a:no-underline prose-a:transition-[border-color] prose-a:duration-200 prose-a:ease-in-out hover:prose-a:border-secondary-8 dark:prose-a:text-primary-1 dark:hover:prose-a:border-primary-1 prose-a:sm:break-words;
 
     h2 {
@@ -232,7 +231,6 @@
       @apply bg-gray-new-90 dark:bg-gray-new-15;
     }
   }
-
   .prose-static {
     @apply prose-ol:list-none;
 
